--- a/conference-dashboard-react/src/App.css
+++ b/conference-dashboard-react/src/App.css
@@ -661,7 +661,7 @@ transform: translateY(-2px);
 
 
 #main-page .card {
-  width: 220px;
+  width: 190px;
   height: 321px;
   background: #fff;
   border-radius: 10px;
@@ -683,7 +683,7 @@ transform: translateY(-2px);
 }
 
 #main-page .card:hover .overlay {
-  transform: scale(4) translateZ(0);
+  transform: scale(6) translateZ(0);
 }
 
 #main-page .card:hover .circle {
@@ -746,9 +746,9 @@ transform: translateY(-2px);
 }
 
 #main-page .overlay {
-  width: 118px;
+  width: 88px;
   position: absolute; 
-  height: 118px;
+  height: 88px;
   border-radius: 50%;
   background: var(--bg-color);
   top: 70px;
@@ -758,7 +758,7 @@ transform: translateY(-2px);
 }
 
 
-#main-page .stacked-chart {
+#main-page .charts {
   background-color: white;
   border-radius: 10px;
 }
